--- a/css/style.css
+++ b/css/style.css
@@ -116,7 +116,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .container {
 	position: relative;
-	width: 85%;
+	width: 90%;
 	margin: 0 auto;
 	
 }
@@ -147,7 +147,7 @@ h1, h2, h3, h4, h5, h6 {
 	color: #C4C5D9;
 	box-sizing: border-box;
 	overflow: none;
-	
+	opacity: 0.8;	
 
 }
 
@@ -157,9 +157,13 @@ h1, h2, h3, h4, h5, h6 {
 	top: -17px;
 	max-height: 100%;
 	font-size: 900%;	
-	text-shadow: 0 0 3px #DC143C, 0 0 10px #0C0D21;
-	
+	text-shadow: 0 0 3px #DC143C, 0 0 10px #0C0D21;	
 
+}
+
+.title:hover {
+	text-shadow: 0 0 20px #fefcc9, 10px -10px 30px #feec85, -20px -20px 40px #ffae34, 20px -40px 50px #ec760c, -20px -60px 60px #cd4606, 0 -80px 70px #973716, 10px -90px 80px #451b0e;
+	
 }
 
 nav > ul > li > a {
