--- a/css/style.css
+++ b/css/style.css
@@ -86,8 +86,9 @@ body {
 	background-size: cover;
 	font-family: 'Play', sans-serif;
 	-webkit-font-smoothing: antialiased;
-	height: 100%;
+	max-height: 1000px;
 	color: #C4C5D9;
+	overflow-x: hidden;
 	
 }
 
@@ -134,7 +135,7 @@ h1, h2, h3, h4, h5, h6 {
 #banner {
 	position: fixed;
 	width: 100%;
-	height: 7em;
+	height: 7.1em;
 	top: 1em;
 	background: rgb(121,122,142); /* Old browsers */
 	background: -moz-linear-gradient(top,  rgba(121,122,142,1) 0%, rgba(68,69,89,1) 50%, rgba(121,122,142,1) 100%); /* FF3.6+ */
@@ -148,7 +149,9 @@ h1, h2, h3, h4, h5, h6 {
 	box-sizing: border-box;
 	overflow: none;
 	opacity: 0.8;	
-
+	border: 2px solid #30162A;
+	box-shadow: 0 0 5px #DC143C, 0 0 10px #0C0D21;
+	z-index: 99999;
 }
 
 .title {
@@ -157,13 +160,13 @@ h1, h2, h3, h4, h5, h6 {
 	top: -17px;
 	max-height: 100%;
 	font-size: 900%;	
-	text-shadow: 0 0 3px #DC143C, 0 0 10px #0C0D21;	
+	text-shadow: 0px 2px 3px #fff;	
 
 }
 
 .title:hover {
-	text-shadow: 0 0 20px #fefcc9, 10px -10px 30px #feec85, -20px -20px 40px #ffae34, 20px -40px 50px #ec760c, -20px -60px 60px #cd4606, 0 -80px 70px #973716, 10px -90px 80px #451b0e;
-	
+	text-shadow: 0px 2px 3px #fff, 0 0 20px #fefcc9, 10px -10px 30px #feec85, -20px -20px 40px #ffae34, 20px -40px 50px #ec760c, -20px -60px 60px #cd4606, 0 -80px 70px #973716, 10px -90px 80px #451b0e;
+	cursor: default;
 }
 
 nav > ul > li > a {
@@ -217,7 +220,78 @@ nav > ul > li > a:hover {
 
 
 
-/*------------------------------------- Content -------------------------------------*/
+/*------------------------------------- Designer Container -------------------------------------*/
+
+#designer-container {
+	position: relative;
+	width: 80%;
+	height: 600px;
+	margin: 0 auto;
+	background: url(../img/background.jpg) no-repeat;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+	top: 200px;
+	opacity: .7;
+	border: 2px solid #30162A;
+	box-shadow: 0 0 5px #DC143C, 0 0 10px #0C0D21;
+	box-sizing: border-box;
+	z-index: 499;
+}
+
+#designer-content {
+	position: relative;
+	z-index: 99999;
+	width: 70%;
+	margin: 0 auto;	
+	text-align: center;
+	top: -350px;
+	text-shadow: 2px 2px 4px #30162A;
+	box-sizing: border-box;
+	
+
+}
+
+#designer-title {
+	font-size: 4.5em;
+
+
+}
+
+#designer-text {
+	
+	font-size: 1.5em;
+	width: 70%;
+	margin-left: auto;
+	margin-right: auto;
+	text-align: left;
+	line-height: 1.8em;
+
+
+}
+
+#designer-hello {
+	
+	
+margin-top: 50px;
+	font-size: 1.5em;
+	width: 70%;
+	margin-left: auto;
+	margin-right: auto;
+	text-align: left;
+	line-height: 1.2em;
+}
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -234,6 +308,8 @@ footer {
 	height: 50px;
 	background-color: #444559;
 	margin-bottom: 10px;
+	border: 2px solid #30162A;
+	box-shadow: 0 0 5px #DC143C, 0 0 10px #0C0D21;
 
 }
 
@@ -373,5 +449,126 @@ footer {
 .policy > p > a:hover {
 	border-bottom: 2px solid #05061A;
 	text-shadow: 0 0 3px #DC143C, 0 0 10px #0C0D21;
+
+}
+
+
+
+/*------------------------------------- Footer -------------------------------------*/
+
+
+@media (max-width: 1650px) {
+	#banner {
+		height: 6.5em;
+		
+		
+	}
+
+	.title {
+		font-size: 700%;	
+		top: -5px;
+	}
+
+
+	nav > ul > li > a {
+		font-size: 1.8em;
+		
+	}
+
+	nav > ul > li {
+		padding: 7px 5px;
+		top: 3.5em;
+		margin: 0 20px;
+		
+		
+	}
+
+}
+@media (max-width: 1320px) {
+	#banner {
+		height: 6.0em;
+		
+		
+	}
+	.title {
+		font-size: 500%;	
+		top: 20px;
+	}
+
+
+	nav > ul > li > a {
+		font-size: 1.4em;
+		
+	}
+
+	nav > ul > li {
+		padding: 7px 5px;
+		top: 3.5em;
+		margin: 0 20px;
+		
+	}
+
+}
+
+@media (max-width: 1020px) {
+	#banner {
+		height: 6.0em;
+		text-align: center;
+		
+		
+	}
+	.title {
+		font-size: 300%;	
+		top: 0px;
+		float: none;
+	}
+
+
+	nav > ul > li > a {
+		font-size: 1.4em;
+		
+	}
+
+	nav > ul > li {
+		padding: 7px 5px;
+		top: .5em;
+		margin: 0 20px;
+		float: none;
+		display: inline-block;
+	}
+
+}
+
+@media (max-width: 580px) {
+	.container {
+		width: 100%;
+		margin: 0 auto;
+		
+	}
+	#banner {
+		height: 6.0em;
+		text-align: center;
+		
+		
+	}
+	.title {
+		font-size: 300%;	
+		top: 0px;
+		float: none;
+	}
+
+
+	nav > ul > li > a {
+		font-size: 1em;
+		
+	}
+
+	nav > ul > li {
+		padding: 7px 5px;
+		top: 12px;
+		margin: 0 20px;
+		float: none;
+		display: inline-block;
+	}
 
 }
